[gd_scene load_steps=14 format=3 uid="uid://cv044j7pf6pib"]

[ext_resource type="Script" uid="uid://daohn0vhgaan3" path="res://Levels/main_lvl_3.gd" id="1_n2xxi"]
[ext_resource type="PackedScene" uid="uid://b44ebn5xhv34r" path="res://Players/Player scenes/characterBodyP1.tscn" id="3_n2xxi"]
[ext_resource type="Script" uid="uid://ckgykuop7a8bv" path="res://Levels/parallax_background_lvl3.gd" id="4_11cb0"]
[ext_resource type="PackedScene" uid="uid://ckmiuk6k2658l" path="res://Players/Player scenes/characterBodyP2.tscn" id="4_27y8f"]
[ext_resource type="FontFile" uid="uid://q6c0g5avw7b" path="res://Tektur_MainFont/Tektur-VariableFont_wdth,wght.ttf" id="4_hiydk"]
[ext_resource type="Texture2D" uid="uid://bfgjf0iyokkp4" path="res://Assets/Pixel Health Bar/Bar/no health bar.png" id="4_hvelj"]
[ext_resource type="Texture2D" uid="uid://ctysprhh2qur0" path="res://Assets/Pixel Health Bar/Bar/health bar.png" id="5_hiydk"]
[ext_resource type="Texture2D" uid="uid://bvccngnd3tt2b" path="res://Assets/2D Space Parallax Backgrounds/layers/black_bg.png" id="6_hiydk"]
[ext_resource type="Texture2D" uid="uid://b71b1etq41ye2" path="res://Assets/2D Space Parallax Backgrounds/layers/nebula.png" id="7_tifgc"]
[ext_resource type="Texture2D" uid="uid://60hvkelfx71c" path="res://Assets/2D Space Parallax Backgrounds/layers/small_stars.png" id="8_dx5eg"]
[ext_resource type="Texture2D" uid="uid://diwt20qjdcldu" path="res://Assets/2D Space Parallax Backgrounds/layers/big_stars.png" id="9_hsyqg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27y8f"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvelj"]
bg_color = Color(0.288676, 0.443648, 0.194062, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MainLvl_3" type="Node2D"]
script = ExtResource("1_n2xxi")

[node name="CharacterBodyP1" parent="." instance=ExtResource("3_n2xxi")]
position = Vector2(195, 269)

[node name="CharacterBodyP2" parent="." instance=ExtResource("4_27y8f")]
position = Vector2(142, 138)

[node name="HUD" type="CanvasLayer" parent="." groups=["gameplay"]]

[node name="LevelProgressBar" type="ProgressBar" parent="HUD"]
offset_left = 228.0
offset_top = 35.0
offset_right = 251.0
offset_bottom = 235.0
rotation = 4.71239
theme_override_styles/background = SubResource("StyleBoxFlat_27y8f")
theme_override_styles/fill = SubResource("StyleBoxFlat_hvelj")
value = 50.0
fill_mode = 2
show_percentage = false

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="P1HealthBar" type="TextureProgressBar" parent="HUD/Control"]
layout_mode = 0
offset_left = 1.0
offset_right = 129.0
offset_bottom = 40.0
texture_under = ExtResource("4_hvelj")
texture_progress = ExtResource("5_hiydk")

[node name="P1HealthBar2" type="Label" parent="HUD/Control"]
layout_mode = 0
offset_left = 5.0
offset_top = 15.0
offset_right = 309.0
offset_bottom = 121.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("4_hiydk")
theme_override_font_sizes/font_size = 70
text = "PLAYER 1"

[node name="P1PercentLabel" type="Label" parent="HUD/Control"]
layout_mode = 0
offset_left = 49.0
offset_top = -1.0
offset_right = 204.0
offset_bottom = 90.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("4_hiydk")
theme_override_font_sizes/font_size = 70
text = "100"

[node name="P1ScoreLabel" type="Label" parent="HUD/Control" groups=["p1_score_label"]]
layout_mode = 0
offset_left = 5.0
offset_top = 35.0
offset_right = 286.0
offset_bottom = 175.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("4_hiydk")
theme_override_font_sizes/font_size = 70
text = "Score: 0"

[node name="WeaponLabel_P1" type="Label" parent="HUD/Control"]
layout_mode = 0
offset_left = 12.0
offset_top = 63.0
offset_right = 508.0
offset_bottom = 128.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("4_hiydk")
theme_override_font_sizes/font_size = 50
text = "No Weapon Selected"

[node name="Control2" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="P2HealthBar" type="TextureProgressBar" parent="HUD/Control2"]
modulate = Color(0.4, 1, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -89.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture_under = ExtResource("4_hvelj")
texture_progress = ExtResource("5_hiydk")

[node name="P2HealthBar2" type="Label" parent="HUD/Control2"]
layout_mode = 0
offset_left = -84.0
offset_top = 17.0
offset_right = 34.0
offset_bottom = 43.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("4_hiydk")
theme_override_font_sizes/font_size = 70
text = "PLAYER 2"

[node name="P2PercentLabel" type="Label" parent="HUD/Control2"]
layout_mode = 0
offset_left = -40.0
offset_top = 1.0
offset_right = 81.0
offset_bottom = 101.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("4_hiydk")
theme_override_font_sizes/font_size = 70
text = "100"

[node name="P2ScoreLabel" type="Label" parent="HUD/Control2" groups=["p2_score_label"]]
layout_mode = 0
offset_left = -84.0
offset_top = 37.0
offset_right = 197.0
offset_bottom = 132.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("4_hiydk")
theme_override_font_sizes/font_size = 70
text = "Score: 0"

[node name="WeaponLabel_P2" type="Label" parent="HUD/Control2"]
layout_mode = 0
offset_left = -113.0
offset_top = 62.0
offset_right = 383.0
offset_bottom = 127.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("4_hiydk")
theme_override_font_sizes/font_size = 50
text = "No Weapon Selected"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("4_11cb0")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.25, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("6_hiydk")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(-2, -2)
texture = ExtResource("7_tifgc")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("8_dx5eg")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1.5, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource("9_hsyqg")
centered = false

[node name="DeathAnnouncement" type="Label" parent="." groups=["death_announcement"]]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Player 1 has died!
"

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
